# CarbonVerifier

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
assets/: forensic.css
data/: projects.json
data/cache/: ADPML_regulator_report.md  VCS832_additionality.json  VCS832_executive_report.md  VCS832_journalist_report.md  VCS832_map.html  VCS832_ndvi_timeseries.json  VCS832_regulator_report.md  VCS934_additionality.json  VCS934_executive_report.md  VCS934_journalist_report.md  VCS934_map.html  VCS934_ndvi_timeseries.json  VCS934_regulator_report.md  VCS981_additionality.json  VCS981_executive_report.md  VCS981_journalist_report.md  VCS981_map.html  VCS981_ndvi_timeseries.json  VCS981_regulator_report.md  VCS985_additionality.json  VCS985_executive_report.md  VCS985_journalist_report.md  VCS985_map.html  VCS985_ndvi_timeseries.json  VCS985_regulator_report.md
data/processed/: VCS832_dataset.json  VCS934_dataset.json  VCS981_dataset.json  VCS985_dataset.json
data/raw/sentinel2/ADPML/2018/: manifest.json
data/raw/sentinel2/VCS832/2018/: manifest.json
data/raw/verra/: Cordillera_Azul_WDPA_303320.geojson  VCS1748_Southern_Cardamom.kml
design/: DESIGN.md  code.html
docs/: DEMO_SCRIPT.md
docs/deck/: index.html
scripts/: analyze_project.py  build_grid_timelapse.py  fetch_project.py  fetch_verra_kml.py  record_demo_gif.py  screenshot_app.py  screenshot_tabs.py
src/cv/: additionality.py  audit_reports.py  bundle.py  forest_loss.py  geometry.py  hansen.py  ndvi.py  paths.py  pdf.py  projects.py  sentinel.py  timelapse.py  ui.py
(+18 files in other folders)
